modules/noosphere/taghmata/nixidy/manifests/prod/sonarr/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: yarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - env:
            - name: PUID
              value: "1031"
            - name: PGID
              value: "65537"
            - name: SONARR__POSTGRES__HOST
              value: pg-yarr-2-rw
            - name: SONARR__POSTGRES__PORT
              value: "5432"
            - name: SONARR__POSTGRES__USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: pg-sonarr-password
            - name: SONARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-sonarr-password
            - name: SONARR__POSTGRES__MAINDB
              value: sonarr
            - name: SONARR__POSTGRES__LOGDB
              value: sonarr-logs
            - name: SONARR__SERVER__PORT
              value: "8989"
          image: lscr.io/linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: data
          nfs:
            path: /volume1/data/
            server: 192.168.1.61
