modules/noosphere/taghmata/nixidy/manifests/prod/sonarr/Service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
